# mskql

./: .gitignore  CMakeLists.txt  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  architecture.html  bench-vs-pg.html  bench-workloads.html  construction.html  design-philosophy.html  getting-started.html  grammar.html  index.html  playground.html  sql-reference.html  style.css  testing.html
.github/workflows/: benchmarks.yml  codspeed.yml  wasm.yml
bench/: bench.c  bench_codspeed.cpp  bench_throughput.c  bench_vs_duck.c  bench_vs_pg.py  bench_vs_pg.sh  gen_parquet_bench.py  parse_perf.py  parse_simd.py  perf_analysis.sh  simd_report.sh  verify_correctness.c
benchmarks/: database_benchmarks.cpp
dev/bench/: data.js  index.html
notes/: arena-model.html  correlated-subquery.html  cte-materialization.html  custom-parquet.html  disk-tables.html  flat-storage.html  hnsw-index.html  index.html  logical-ir.html  order-by-gap.html  radix-sort.html  result-cache.html  swiss-table-join.html  top-n-sort.html  vec-project.html
src/: Makefile  arena.h  arena_helpers.h  block.h  catalog.c  catalog.h  column.c  column.h  database.c  database.h  datetime.c  datetime.h  diskio.c  diskio.h  dynamic_array.h  explain_ast.c  explain_ast.h  hnsw.c  hnsw.h  index.c  index.h  logical.c  logical.h  main.c  mskql.h  mskql_api.c  mskqlcli.c  parquet.c  parquet.h  parser.c  parser.h  pgwire.c  pgwire.h  plan.c  plan.h  pq_reader.c  pq_reader.h  query.c  query.h  row.c  (+10 more)
testcases/: test_agg_where_gt.sql  test_arith_expr.sql  test_arith_float.sql  test_avg_float.sql  test_case_when.sql  test_coalesce.sql  test_coalesce_null.sql  test_count.sql  test_count_empty.sql  test_create_table.sql  test_delete_index_shift.sql  test_delete_where_float.sql  test_distinct.sql  test_distinct_order.sql  test_drop_table.sql  test_drop_type.sql  test_group_by_limit.sql  test_group_by_max.sql  test_group_by_order.sql  test_group_by_sum_float.sql  test_having_min.sql  test_insert_float.sql  test_insert_missing_col.sql  test_insert_negative.sql  test_is_null.sql  test_join_limit.sql  test_join_order.sql  test_join_where.sql  test_join_where_qualified.sql  test_left_join_where_null.sql  test_like.sql  test_limit.sql  test_multi_join.sql  test_order_by_asc.sql  test_rank.sql  test_row_number_partition.sql  test_select_col_order_other.sql  test_select_where.sql  test_select_where_negative.sql  test_simple.sql  (+10 more)
tests/: gen_parquet_fixtures.py  lsan_suppressions.txt  test.sh
tests/cases/: test_adversarial_alter_add_column_then_select.sql  test_adversarial_between_reversed.sql  test_adversarial_bigint_overflow.sql  test_adversarial_boolean_arithmetic.sql  test_adversarial_case_when_no_match.sql  test_adversarial_cast_chain.sql  test_adversarial_cast_garbage.sql  test_adversarial_cast_null_chain.sql  test_adversarial_coalesce_all_null.sql  test_adversarial_concat_overflow.sql  test_adversarial_count_distinct_all_same.sql  test_adversarial_count_distinct_with_null.sql  test_adversarial_cross_join_empty.sql  test_adversarial_cte_shadow_table.sql  test_adversarial_deeply_nested_expr.sql  test_adversarial_delete_all_then_select.sql  test_adversarial_distinct_null.sql  test_adversarial_div_zero.sql  test_adversarial_double_create.sql  test_adversarial_drop_if_exists.sql  test_adversarial_drop_nonexistent.sql  test_adversarial_empty_string_ops.sql  test_adversarial_empty_string_vs_null.sql  test_adversarial_empty_table_agg.sql  test_adversarial_empty_table_order_by.sql  test_adversarial_empty_table_select.sql  test_adversarial_float_nan.sql  (+1448 more)
tutorials/: index.html  indexes-performance.html  multi-table-joins.html  parquet-foreign-tables.html  recursive-ctes.html  reporting-dashboard.html  schema-evolution.html  sequences-enums.html  set-operations.html  string-math-functions.html  task-tracker.html  time-series.html  tutorial-interactive.css  tutorial-interactive.js  tutorial.css
wasm/: mskql-wasm.js  mskql.wasm
(+4 files in other folders)
